@@ -1,3 +1,13 @@
+2008-09-09  Joerg Bornemann  <joerg.bornemann@trolltech.com>
+
+        Reviewed by Sam Weinig.
+
+        https://bugs.webkit.org/show_bug.cgi?id=20746
+
+        Added WINCE platform macro.
+
+        * wtf/Platform.h:
+
 2008-09-09  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Mark Rowe.
